tests/expectations/compiler/constructor/admin_constructor_with_bad_address.out
DCE_ENABLED:
Error [ESAZ0374011]: 'aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzpx' is not a valid address: Invalid account address length: found 61, expected 63
    --> compiler-test:8:5
     |
   8 |     async constructor() {
     |     ^^^^^^^^^^^^^^^^^^^^^
   9 |         assert_eq(self.program_owner, aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |     }
     |     ^
Error [ESAZ0374011]: The constructor is not well-formed for the 'admin' upgrade configuration.
    --> compiler-test:8:5
     |
   8 |     async constructor() {
     |     ^^^^^^^^^^^^^^^^^^^^^
   9 |         assert_eq(self.program_owner, aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |     }
     |     ^
     |
     = 
The expected constructor is:
```
async constructor() {
    assert_eq(self.program_owner, aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzpx);
}
```

For more information, please refer to the documentation: TODO
    

DCE_DISABLED:
Error [ESAZ0374011]: 'aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzpx' is not a valid address: Invalid account address length: found 61, expected 63
    --> compiler-test:8:5
     |
   8 |     async constructor() {
     |     ^^^^^^^^^^^^^^^^^^^^^
   9 |         assert_eq(self.program_owner, aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |     }
     |     ^
Error [ESAZ0374011]: The constructor is not well-formed for the 'admin' upgrade configuration.
    --> compiler-test:8:5
     |
   8 |     async constructor() {
     |     ^^^^^^^^^^^^^^^^^^^^^
   9 |         assert_eq(self.program_owner, aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzp9px);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |     }
     |     ^
     |
     = 
The expected constructor is:
```
async constructor() {
    assert_eq(self.program_owner, aleo1rhgdu77hgyqd3xjj8ucu3jj9r2krwz6mnzyd80gncr5fxcwlh5rsvzpx);
}
```

For more information, please refer to the documentation: TODO
    
